2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.addin.xml: Merged the extension points for project and
	  solution option panels into a single extension point. A single
	  extension point will now be used for all kinds of items. Extension
	  conditions can be used to make panels visible only for some
	  specific item types.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* ProjectOptionPanel.cs, ChangeLogData.cs, ProjectOptionPanelWidget.cs,
	  ChangeLogAddIn.addin.xml, ChangeLogAddIn.mdp, gtk-gui/gui.stetic,
	  Makefile.am, ChangeLogService.cs: New project model changes.

2008-03-07  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddInOptionsPanel.cs, ChangeLogAddIn.addin.xml,
	  ChangeLogAddInOptionPanelWidget.cs: Use new options dialog
	  infrastructure.
	* CommitDialogExtensionWidget.cs: Reduce width of comments, so it fits
	  in 80 cols with tabsize 8.

2008-02-26  Mike Krüger <mkrueger@novell.com> 

	

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.addin.xml: Update MD version.

2008-01-22  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.addin.xml: Updated add-in category and description.

2008-01-15  Michael Hutchinson <mhutchinson@novell.com> 

	* ChangeLogAddInOptionPanelWidget.cs: Make strings translatable.

2007-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.mdp: Updated project files. The order of extended
	  properties won't change anymore.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/generated.cs,
	  gtk-gui/MonoDevelop.ChangeLogAddIn.ProjectOptionPanelWidget.cs,
	  gtk-gui/MonoDevelop.ChangeLogAddIn.ChangeLogAddInOptionPanelWidget.cs,
	  gtk-gui/MonoDevelop.ChangeLogAddIn.AddLogEntryDialog.cs: Regenerated
	  gui.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.addin.xml: Bump add-in versions.

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.mdp, Makefile.am: Directory reorganization.
