@@ -1,5 +1,10 @@
 2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 
 
+	* ChangeLogAddIn.addin.xml: Show the options dialog only for solution
+	  items and solutions.
+
+2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 
+
 	* ChangeLogAddIn.addin.xml: Merged the extension points for project and
 	  solution option panels into a single extension point. A single
 	  extension point will now be used for all kinds of items. Extension
